# l4oj-backend

./: .gitignore  Cargo.toml  build.rs  init.sql
.cargo/: config.toml
lean/: CollectLiterals.lean  fold.cpp  l4judger.lean  patch
patches/: axum-05de165.patch  axum-4077966.patch  axum-4c09ea7.patch  axum-81e727f.patch  axum-b1c5ed9.patch  bb8-0.9.1.patch  bytes-1.11.0.patch  compact_str-0.9.0.patch  dashmap-366ce7e.patch  env_logger-02389fa.patch  env_logger-76891b9.patch  futures-core-0.3.31.patch  hashbrown-0.16.1.patch  http-1.4.0.patch  http-body-util-0.1.3.patch  rust-postgres-ac029de.patch  rust-postgres-b7f2cf0.patch  rust-postgres-c6e435e.patch  rust-postgres-c7a615c.patch  rust-postgres-f187cc5.patch  serde_json-1.0.148.patch  serde_json-1.0.149.patch  tempfile-3.24.0.patch  tokio-1.48.0.patch  tokio-1.49.0.patch  tower-sessions-7800836.patch
src/: api.rs  judger.rs  libs.rs  main.rs  models.rs  service.rs
src/api/: auth.rs  discussion.rs  fs.rs  group.rs  homepage.rs  judge_client.rs  problem.rs  submission.rs  user.rs
src/api/homepage/: links.rs
src/api/problem/: tag.rs
src/judger/: constants.rs  main.rs  task.rs
src/libs/: auth.rs  constants.rs  db.rs  emoji.rs  error.rs  fs.rs  logger.rs  lquery.rs  olean.rs  privilege.rs  request.rs  response.rs  serde.rs  session.rs  util.rs  validate.rs
src/libs/auth/: availability.rs
src/libs/judger/: task.rs
src/libs/preference/: server.rs
src/models/: discussion.rs  group.rs  localedict.rs  problem.rs  submission.rs  tag.rs  user.rs
src/models/discussion/: query_replies_type.rs  reaction.rs  reply.rs
src/models/submission/: aoe.rs  message.rs  status.rs
src/models/user/: information.rs
src/service/: rsync.rs  submission_deposit.rs
src/service/rsync/: file_entry.rs  io.rs  jumping.rs  mode.rs  multiplex.rs  read.rs  write.rs
